Fixed white spaces for mobile

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -52,6 +52,10 @@
 }
 
 @media screen and (max-width: 615px) {
+  .wrapper {
+    height: calc(100dvh - 14rem);
+  }
+
   .spanWrapper {
     min-width: 32.6rem;
     text-align: center;
