--- a/src/components/UI/Section/Section.module.css
+++ b/src/components/UI/Section/Section.module.css
@@ -15,3 +15,9 @@
     padding: 0 2rem 16rem;
   }
 }
+
+@media screen and (max-width: 460px) {
+  .sectionContainer {
+    padding: 0 2rem 12rem;
+  }
+}
